syntax = "proto3";
package superstellar;
option go_package = "pb";

message Message {
  oneof content {
    Space space           = 1;
    Hello hello           = 2;
    PlayerLeft playerLeft = 3;
  }
}

message IntVector {
  int32 x = 1;
  int32 y = 2;
}

message Vector {
  float x = 1;
  float y = 2;
}

message Spaceship {
  uint32    id = 1;
  IntVector position = 2;
  Vector    velocity = 3;
  float     facing = 4;
  bool      inputThrust = 5;
}

message PlayerLeft {
  uint32 id = 1;
}

message Space {
  uint32 physicsFrameID = 1;
  repeated Spaceship spaceships = 2;
}

message Hello {
  uint32 myId = 1;
  //map<int32, String> idToPlayerName = 2;
}

enum Direction {
  NONE = 0;
  LEFT = 1;
  RIGHT = 2;
}

message UserInput {
  bool thrust = 1;
  Direction direction = 2;
}
